--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "gulp"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "ts": "^0.2.2"
   },
   "devDependencies": {
     "browser-sync": "^3.0.2",
